# fw-hdl

./: .gitignore  flow.yaml  ivpm.yaml
.github/workflows/: ci.yml
examples/: counter.sv  counter_tb.sv  flow.yaml  log
python/: README.md  pyproject.toml
python/fw/: __init__.py
python/fw/hdl/: CENTRALIZED-LOWERING-DESIGN.md  DESIGN.md  PLAN.md  REUSE-AUDIT.md  SPL-IR-CONTRACT.md  __init__.py  __main__.py  cli.py  config.py  errors.py  flow.py  ir_build.py  ir_text.py  mmio_synth.py  regmap.py
python/fw/hdl/emit/: __init__.py  be_sv.py  regblock.py  structural.py
python/fw/hdl/fe/: __init__.py  astdump.py  class_mapper.py  context.py  expr_mapper.py  func_mapper.py  mmio.py  parser.py  reg_consumer.py  reg_mapper.py  stmt_mapper.py  type_mapper.py
python/fw/hdl/fe/bind/: __init__.py  elaborate.py  protocols.py
python/fw/hdl/lower/: __init__.py  spl2rtl.py
skills/fw-api-kit/: SKILL.md
skills/fw-hdl/: SKILL.md
src/: flow.yaml  fw_awaitable_if.svh  fw_bind.svh  fw_clock_domain.svh  fw_clock_domain_if.svh  fw_clock_xtor_bridge.svh  fw_clock_xtor_if.sv  fw_component.svh  fw_component_param.svh  fw_component_root.svh  fw_component_root_param.svh  fw_elaboratable.svh  fw_event_set.svh  fw_export.svh  fw_get_if.svh  fw_hdl_macros.svh  fw_hdl_pkg.sv  fw_if_base.svh  fw_pkg.sv  fw_port.svh  fw_put_if.svh  fw_put_xtor_if.sv  fw_put_xtor_impl.svh  fw_reg.svh  fw_reg_base.svh  fw_reg_block.svh  fw_reg_block_if.svh  fw_reg_rd_if.svh  fw_reg_set.svh  fw_reg_val_if.svh  fw_reg_wr_if.svh  fw_reqrsp_if.svh  fw_root.sv  fw_runnable.svh  fw_runner.sv  fw_write_if.svh  spl_bind.svh  spl_clock_domain.svh  spl_clock_xtor_if.sv  spl_component.svh  (+11 more)
tests/: flow.yaml  fw_smoke_tb.sv
(+152 files in other folders)
